2000-10-17  Chema Celorio  <chema@celorio.com>

	* prefs.c (gedit_prefs_save_settings): quick fix to not crash
	when gedit is beeing closed thru the window manager.
	/me opens the brown paper bag drawer

2000-10-16  Chema Celorio  <chema@celorio.com>

	* search.c (gedit_replace_all_execute): fix a crash when replacing
	all. (gmorten found it).

	* recent.c (gedit_recent_update_menus): rewrite, fix recent items
	bugs.
	(gedit_recent_add_menu_item): implement
	(gedit_recent_remove): clean

	* prefs.h (struct _Preferences): remove settings->num_recent, we have
	recent file list, and we know the size of the list.

	* recent.c (gedit_recent_update_menus): don't return if list == NULL.
	This was causing a crash.

	* menus.c: clean the file, remove unused stuff
	add ifndef's for stuff that is disabled
	* menus.h: ditto

2000-10-15  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-prefs.c (apply_cb): fix a crash when starting with
	a clean ~/.gnome/gedit. You Shall strdup a string you plan to free.

2000-10-15  Chema Celorio  <chema@celorio.com>

	* menus.c: renamed some public functions prepending gedit_
	to their names

	* search.h: clean and leave only the functions that are called.	

	* search.c: make this struct private, move from .h to .c
	start cleaning this file too.

	* document.h (struct _GeditDocument): ditto. Rename from Document
	to GeditDocument

	* view.h (struct _GeditView): start to clean this mess. This struct
	is much smaller now. Rename from View to GeditView

	* view.c (gedit_view_get_type): start cleaning this file. Adding function
	descriptions and removing the nonsense code.

	* file.c (file_revert_cb): kill a memleak when reverting documents.
	(gedit_file_open): do not allow doc->filename & fname to point at the
	same location. We might free doc->filename inside.

2000-10-15  Chema Celorio  <chema@celorio.com>

	* undo.c (gedit_undo_add): allow adding 0 size undo elements. The user
	might replace "foo" with "".
