@@ -1,3 +1,11 @@
+2000-10-20  Chema Celorio  <chema@celorio.com>
+
+	* search.c (gedit_search_execute): kill a warning
+	(gedit_replace_all_execute): fix a stupid crash
+
+	* dialogs/dialog-replace.c (action_replace_all): fix #29036
+	(action_find): kill a warning
+
 2000-10-17  Chema Celorio  <chema@celorio.com>
 
 	* prefs.c (gedit_prefs_save_settings): quick fix to not crash
